--- a/src/_tpl_layout_header.html
+++ b/src/_tpl_layout_header.html
@@ -4,7 +4,7 @@
 			<!--logo-->
 			<strong class="logo">
 				<@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a href="index.html" title="Project Name"}>Project Name</@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a}>
-				<img style="display: none;" src="img/logo-print.jpg" alt="Project Name">
+				<img style="display: none;" src="img/logo.png" alt="Project Name">
 			</strong>
 			<!--logo end-->
 
