--- a/src/forms.html
+++ b/src/forms.html
@@ -28,12 +28,12 @@
 	<meta property="og:description" content="Описание">
 	<meta property="og:site_name" content="Расширенное название">
 	<!--Favicon-->
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="shortcut icon" href="favicon.ico?rev=@@hash">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico?rev=@@hash">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png?rev=@@hash">
 	<!--Style-->
-	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/libs.min.css?rev=@@hash">
+	<link rel="stylesheet" href="css/main.css?rev=@@hash">
 	<!--Modernizr-->
 	<script src="js/modernizr.min.js"></script>
 </head>
@@ -50,7 +50,7 @@
 					<!--logo-->
 					<strong class="logo">
 				<a href="index.html" title="Project Name">Project Name</a>
-				<img style="display: none;" src="img/logo-print.jpg" alt="Project Name">
+				<img style="display: none;" src="img/logo.png" alt="Project Name">
 			</strong>
 					<!--logo end-->
 					<!--navigation-->
@@ -1699,8 +1699,8 @@
 												</div>
 												<div class="input-holder">
 													<input type="text" id="user-form-example__name-field">
-													<span class="error-note">Поле обязательное для заполнения</span>
-													<span class="success-note">&nbsp;</span>
+													<div class="error-note">Поле обязательное для заполнения</div>
+													<div class="success-note">Подтверждено</div>
 												</div>
 											</div>
 											<div class="input-wrap">
@@ -1709,8 +1709,8 @@
 												</div>
 												<div class="input-holder">
 													<input type="email" id="user-form-example__email-field">
-													<span class="error-note">Поле обязательное для заполнения</span>
-													<span class="success-note">&nbsp;</span>
+													<div class="error-note">Поле обязательное для заполнения</div>
+													<div class="success-note">Подтверждено</div>
 												</div>
 											</div>
 											<div class="input-wrap">
@@ -1719,8 +1719,8 @@
 												</div>
 												<div class="input-holder">
 													<textarea id="user-form-example__message-field"></textarea>
-													<span class="error-note">Поле обязательное для заполнения</span>
-													<span class="success-note">&nbsp;</span>
+													<div class="error-note">Поле обязательное для заполнения</div>
+													<div class="success-note">Подтверждено</div>
 												</div>
 											</div>
 											<div class="input-wrap">
@@ -1740,7 +1740,8 @@
 														<img src="img/captcha.jpg" alt="captcha" />
 														<input type="text" id="user-form-example__captcha-field">
 														<span class="error-note">Введите текст на картинке для защиты от спама</span>
-														<span class="success-note">&nbsp;</span>
+														<div class="error-note">Введите текст на картинке для защиты от спама</div>
+														<div class="success-note">Подтверждено</div>
 													</div>
 												</div>
 											</div>
@@ -2113,7 +2114,7 @@
 	<!--footer end-->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
-	<script src="js/common.js"></script>
+	<script src="js/common.js?rev=@@hash"></script>
 </body>
 
 </html>
