--- a/src/inner.html
+++ b/src/inner.html
@@ -28,12 +28,12 @@
 	<meta property="og:description" content="Описание">
 	<meta property="og:site_name" content="Расширенное название">
 	<!--Favicon-->
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="shortcut icon" href="favicon.ico?rev=@@hash">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico?rev=@@hash">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png?rev=@@hash">
 	<!--Style-->
-	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/libs.min.css?rev=@@hash">
+	<link rel="stylesheet" href="css/main.css?rev=@@hash">
 	<!--Modernizr-->
 	<script src="js/modernizr.min.js"></script>
 </head>
@@ -50,7 +50,7 @@
 					<!--logo-->
 					<strong class="logo">
 				<a href="index.html" title="Project Name">Project Name</a>
-				<img style="display: none;" src="img/logo-print.jpg" alt="Project Name">
+				<img style="display: none;" src="img/logo.png" alt="Project Name">
 			</strong>
 					<!--logo end-->
 					<!--navigation-->
@@ -344,7 +344,7 @@
 	<!--footer end-->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
-	<script src="js/common.js"></script>
+	<script src="js/common.js?rev=@@hash"></script>
 </body>
 
 </html>
