--- a/src/__404.html
+++ b/src/__404.html
@@ -2,35 +2,40 @@
 	"title": "Типографика",
 	"pageClass": ""
 })
-<div class="wrapper">
-	<!--HEADER-->
-	@@include('_tpl_layout_header.html', {
-		"currentItem": "Типографика"
-	})
-	<!--HEADER end-->
-	<!--MAIN-->
-	<div class="main">
-		<div class="max-wrap layout">
-			<div class="main__holder">
-				<!--CONTENT-->
-				<div class="content-wrap">
-					<div class="content user-content">
-						<h1>Page Not Found</h1>
-						<p>Sorry, but the page you were trying to view does not exist.</p>
-					</div>
+
+@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "START" })
+
+<!--HEADER-->
+@@include('_tpl_layout_header.html', {
+	"currentItem": "Типографика"
+})
+<!--HEADER end-->
+
+<!--MAIN-->
+<div class="main">
+	<div class="max-wrap layout">
+		<div class="main__holder">
+			<!--CONTENT-->
+			<div class="content-wrap">
+				<div class="content user-content">
+					<h1>Page Not Found</h1>
+					<p>Sorry, but the page you were trying to view does not exist.</p>
 				</div>
-				<!--CONTENT end-->
-
-				<!--SIDEBAR-->
-				@@include('_tpl_layout_sidebar.html')
-				<!--SIDEBAR-->
-
-				<!--ASIDE-->
-				@@include('_tpl_layout_aside.html')
-				<!--ASIDE end-->
 			</div>
+			<!--CONTENT end-->
+
+			<!--SIDEBAR-->
+			@@include('_tpl_layout_sidebar.html')
+			<!--SIDEBAR-->
+
+			<!--ASIDE-->
+			@@include('_tpl_layout_aside.html')
+			<!--ASIDE end-->
 		</div>
 	</div>
-	<!--MAIN end-->
 </div>
+<!--MAIN end-->
+
+@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "END" })
+
 @@include('_tpl_layout_foot.html')
