--- a/src/__index.html
+++ b/src/__index.html
@@ -2,45 +2,50 @@
 	"title": "Главная",
 	"pageClass": ""
 })
-<div class="wrapper">
-	<!--HEADER-->
-	@@include('_tpl_layout_header.html', {
-		"currentItem": "Главная"
-	})
-	<!--HEADER end-->
-	<!--MAIN-->
-	<div class="main">
-		<div class="max-wrap layout">
-			<div class="main__holder">
-				<!--CONTENT-->
-				<div class="content-wrap">
-					<div class="content user-content">
-						<!--breadcrumbs-->
-						@@include('_tpl_breadcrumbs.html', {
-							"items": ["Главная"],
-							"last": "Главная"
-						})
-						<!--breadcrumbs end-->
-						<section class="section">
-							<div class="section__title"><h2>Заголовок секции</h2></div>
-							<div class="section__holder">
-								Контент секции
-							</div>
-						</section>
-					</div>
+
+@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "START" })
+
+<!--HEADER-->
+@@include('_tpl_layout_header.html', {
+	"currentItem": "Главная"
+})
+<!--HEADER end-->
+
+<!--MAIN-->
+<div class="main">
+	<div class="max-wrap layout">
+		<div class="main__holder">
+			<!--CONTENT-->
+			<div class="content-wrap">
+				<div class="content user-content">
+					<!--breadcrumbs-->
+					@@include('_tpl_breadcrumbs.html', {
+						"items": ["Главная"],
+						"last": "Главная"
+					})
+					<!--breadcrumbs end-->
+					<section class="section">
+						<div class="section__title"><h2>Заголовок секции</h2></div>
+						<div class="section__holder">
+							Контент секции
+						</div>
+					</section>
 				</div>
-				<!--CONTENT end-->
-
-				<!--SIDEBAR-->
-				@@include('_tpl_layout_sidebar.html')
-				<!--SIDEBAR-->
-
-				<!--ASIDE-->
-				@@include('_tpl_layout_aside.html')
-				<!--ASIDE end-->
 			</div>
+			<!--CONTENT end-->
+
+			<!--SIDEBAR-->
+			@@include('_tpl_layout_sidebar.html')
+			<!--SIDEBAR-->
+
+			<!--ASIDE-->
+			@@include('_tpl_layout_aside.html')
+			<!--ASIDE end-->
 		</div>
 	</div>
-	<!--MAIN end-->
 </div>
+<!--MAIN end-->
+
+@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "END" })
+
 @@include('_tpl_layout_foot.html')
