--- a/src/_tpl_layout_foot.html
+++ b/src/_tpl_layout_foot.html
@@ -5,6 +5,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/libs.min.js"></script>
-<script src="js/common.js"></script>
+<script src="js/common.js?rev=@@hash"></script>
 </body>
 </html>
