--- a/src/__index.html
+++ b/src/__index.html
@@ -46,6 +46,10 @@
 </div>
 <!--MAIN end-->
 
+<!--FOOTER-->
+@@include('_tpl_layout_footer.html')
+<!--FOOTER end-->
+
 @@include('_tpl_PAGE_WRAP.html', {"pageWrap": "END" })
 
 @@include('_tpl_layout_foot.html')
