--- a/src/__inner.html
+++ b/src/__inner.html
@@ -85,6 +85,10 @@
 </div>
 <!--MAIN end-->
 
+<!--FOOTER-->
+@@include('_tpl_layout_footer.html')
+<!--FOOTER end-->
+
 @@include('_tpl_PAGE_WRAP.html', {"pageWrap": "END" })
 
 @@include('_tpl_layout_foot.html')
