--- a/src/__typography.html
+++ b/src/__typography.html
@@ -783,6 +783,10 @@
 </div>
 <!--MAIN end-->
 
+<!--FOOTER-->
+@@include('_tpl_layout_footer.html')
+<!--FOOTER end-->
+
 @@include('_tpl_PAGE_WRAP.html', {"pageWrap": "END" })
 
 @@include('_tpl_layout_foot.html')
