--- a/src/index.html
+++ b/src/index.html
@@ -280,35 +280,37 @@
 			</div>
 		</div>
 		<!--MAIN end-->
-	</div>
-	<!-- >>> foot.tpl <<< -->
-	<!--footer-->
-	<footer class="footer">
-		<div class="max-wrap layout">
-			<div class="footer__holder">
-				<!--footer bottom-->
-				<div class="footer-bottom">
-					<div class="footer-bottom__holder">
-						<div class="footer-bottom__col">
-							<span class="copyright">&copy; <a href="index.html">Project</a> 2017</span>
-						</div>
-						<div class="footer-bottom__col">
-							<!--developer-->
-							<div class="developer">
-								<a href="http://astronim.by/" target="_blank">
-									<span class="developer__label">Разработка сайта —</span>
-									<span class="developer__logo">Astronim*Support</span>
-								</a>
+		<!--FOOTER-->
+		<footer class="footer">
+			<div class="max-wrap layout">
+				<div class="footer__holder">
+					<!--footer bottom-->
+					<div class="footer-bottom">
+						<div class="footer-bottom__holder">
+							<div class="footer-bottom__col">
+								<span class="copyright">&copy; <a href="index.html">Project</a> 2018</span>
 							</div>
-							<!--developer end-->
+							<div class="footer-bottom__col">
+								<a href="tel:8 000 111-22-33">8 000 111-22-33</a> / <a href="mailto:email@project.com">email@project.com</a>
+							</div>
+							<div class="footer-bottom__col">
+								<!--developer-->
+								<div class="developer">
+									<a href="http://astronim.by/" target="_blank">
+										<span class="developer__label">Разработка сайта <i>—</i></span>
+										<span class="developer__logo">Astronim*Support</span>
+									</a>
+								</div>
+								<!--developer end-->
+							</div>
 						</div>
 					</div>
+					<!--footer bottom end-->
 				</div>
-				<!--footer bottom end-->
 			</div>
-		</div>
-	</footer>
-	<!--footer end-->
+		</footer>
+		<!--FOOTER end-->
+	</div>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
 	<script src="js/common.js?rev=@@hash"></script>
