--- a/src/_tpl_forms_user-form.html
+++ b/src/_tpl_forms_user-form.html
@@ -34,7 +34,7 @@
 					<span class="label">Прикрепить файл</span>
 				</div>
 				<div class="input-holder upload-file__container">
-					<input class="upload-file" name="files[]" type="file" multiple="multiple" data-jfiler-limit="2">
+					<input class="upload-file" name="files[]" type="file" multiple="multiple">
 				</div>
 			</div>
 			<div class="input-wrap">
