--- a/src/test-mixins.html
+++ b/src/test-mixins.html
@@ -60,9 +60,28 @@
 							<!--(1) START nav FIRST level-->
 							<ul class="nav__list nav-js">
 								<!--nav item start-->
+								<li class="has-drop">
+									<div class="nav__tab nav__tab-js">
+										<a href="all-pages.html"><span>All pages</span></a>
+										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+									</div>
+									<!--(2) START nav SECOND level-->
+									<div class="nav__drop nav-drop-js">
+										<ul class="sub-nav__list">
+											<li><a href="404.html"><span>404</span></a></li>
+											<li><a href="forms.html"><span>forms</span></a></li>
+											<li><a href="index.html"><span>index</span></a></li>
+											<li><a href="inner.html"><span>inner</span></a></li>
+											<li><a href="typography.html"><span>typography</span></a></li>
+										</ul>
+									</div>
+									<!--(2) END nav SECOND level-->
+								</li>
+								<!--nav item end-->
+								<!--nav item start-->
 								<li class="has-drop ">
 									<div class="nav__tab nav__tab-js">
-										<a href="typography.html" title="nav - Пункт 1 (Типографика)"><span>Пункт 1 (Типографика)</span></a>
+										<a href="#"><span>Пункт 1</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 									<!--(2) START nav SECOND level-->
@@ -70,13 +89,13 @@
 										<ul class="sub-nav__list">
 											<li>
 												<div class="nav__tab nav__tab-js">
-													<a href="#" title="nav - Пункт 1.1"><span>Пункт 1.1</span></a>
+													<a href="#"><span>Пункт 1.1</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
 											</li>
 											<li class="has-drop">
 												<div class="nav__tab nav__tab-js">
-													<a href="#" title="nav - Пункт 1.2 (есть подпункты)"><span>Пункт 1.2 (есть подпункты)</span></a>
+													<a href="#"><span>Пункт 1.2 (есть подпункты)</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(3) START nav THIRD level-->
@@ -84,13 +103,13 @@
 													<ul class="sub-nav__list">
 														<li>
 															<div class="nav__tab nav__tab-js">
-																<a href="#" title="nav - Пункт 1.2.1"><span>Пункт 1.2.1</span></a>
+																<a href="#"><span>Пункт 1.2.1</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
 														</li>
 														<li class="has-drop">
 															<div class="nav__tab nav__tab-js">
-																<a href="#" title="nav - Пункт 1.2.2 (есть подпункты)"><span>Пункт 1.2.2 (есть подпункты)</span></a>
+																<a href="#"><span>Пункт 1.2.2 (есть подпункты)</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
 															<!--(4) START nav FOURTH level-->
@@ -98,25 +117,25 @@
 																<ul class="sub-nav__list">
 																	<li>
 																		<div class="nav__tab nav__tab-js">
-																			<a href="#" title="nav - Пункт 1.2.2.1"><span>Пункт 1.2.2.1</span></a>
+																			<a href="#"><span>Пункт 1.2.2.1</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
 																	</li>
 																	<li>
 																		<div class="nav__tab nav__tab-js">
-																			<a href="#" title="nav - Пункт 1.2.2.2"><span>Пункт 1.2.2.2</span></a>
+																			<a href="#"><span>Пункт 1.2.2.2</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
 																	</li>
 																	<li>
 																		<div class="nav__tab nav__tab-js">
-																			<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
+																			<a href="#"><span>Пункт 1.2.2.3</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
 																	</li>
 																	<li>
 																		<div class="nav__tab nav__tab-js">
-																			<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
+																			<a href="#"><span>Пункт 1.2.2.3</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
 																	</li>
@@ -126,13 +145,13 @@
 														</li>
 														<li>
 															<div class="nav__tab nav__tab-js">
-																<a href="#" title="nav - Пункт 1.2.3"><span>Пункт 1.2.3</span></a>
+																<a href="#"><span>Пункт 1.2.3</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
 														</li>
 														<li>
 															<div class="nav__tab nav__tab-js">
-																<a href="#" title="nav - Пункт 1.2.4"><span>Пункт 1.2.4</span></a>
+																<a href="#"><span>Пункт 1.2.4</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
 														</li>
@@ -142,13 +161,13 @@
 											</li>
 											<li>
 												<div class="nav__tab nav__tab-js">
-													<a href="#" title="nav - Пункт 1.4"><span>Пункт 1.4</span></a>
+													<a href="#"><span>Пункт 1.4</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
 											</li>
 											<li>
 												<div class="nav__tab nav__tab-js">
-													<a href="#" title="nav - Пункт 1.5"><span>Пункт 1.5</span></a>
+													<a href="#"><span>Пункт 1.5</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
 											</li>
@@ -160,35 +179,41 @@
 								<!--nav item start-->
 								<li class="">
 									<div class="nav__tab nav__tab-js">
-										<a href="#" title="nav - Пункт 2"><span>Пункт 2</span></a>
+										<a href="#"><span>Пункт 2</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 								</li>
 								<!--nav item end-->
+								<!--==================================================================-->
+								<!--====================== ПРИМЕР БЕЗ ДРОПА ==========================-->
+								<!--==================================================================-->
 								<!--nav item start-->
 								<li class="">
 									<div class="nav__tab nav__tab-js">
-										<a href="#" title="nav - Пункт 3"><span>Пункт 3</span></a>
+										<a href="#"><span>Пункт 3</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 								</li>
 								<!--nav item end-->
+								<!--==================================================================-->
+								<!--================== ПРИМЕР БЕЗ ДРОПА конец ========================-->
+								<!--==================================================================-->
+								<!--==================================================================-->
+								<!--====================== ПРИМЕР С ДРОПОМ ===========================-->
+								<!--==================================================================-->
+								<!--Чтобы лучше было видно группу пунктов в одно дропе, нужно подсветить этот дроп, введя в поиск ==========3========== -->
 								<!--nav item start-->
 								<li class="has-drop">
 									<div class="nav__tab nav__tab-js">
-										<a href="#" title="nav - tt1tt"><span>tt1tt</span></a>
+										<a href="#"><span>tt1tt</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 									<!--(2) START nav SECOND level-->
 									<div class="nav__drop nav-drop-js">
 										<ul class="sub-nav__list">
-											<!--==================================================================-->
-											<!--=========================== ПРИМЕР ===============================-->
-											<!--==================================================================-->
-											<!--Чтобы лучше было видно группу пунктов в одно дропе, нужно подсветить этот дроп, введя в поиск ==========3========== -->
 											<li class="has-drop">
 												<div class="nav__tab nav__tab-js">
-													<a href="#" title="nav - tt2tt"><span>tt2tt</span></a>
+													<a href="#"><span>tt2tt</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(3) START nav THIRD level-->
@@ -196,7 +221,7 @@
 													<ul class="sub-nav__list">
 														<li>
 															<div class="nav__tab nav__tab-js">
-																<a href="#" title="nav - tt3tt"><span>tt3tt</span></a>
+																<a href="#"><span>tt3tt</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
 														</li>
@@ -204,15 +229,15 @@
 												</div>
 												<!--(3) END nav THIRD level-->
 											</li>
-											<!--пробел ставим ТОЛЬКО после элемента с правилом "pos": "end"-->
-											<!--==================================================================-->
-											<!--=========================== ПРИМЕР конец =========================-->
-											<!--==================================================================-->
 										</ul>
 									</div>
 									<!--(2) END nav SECOND level-->
 								</li>
 								<!--nav item end-->
+								<!--пробел ставим ТОЛЬКО после элемента с правилом "pos": "end"-->
+								<!--==================================================================-->
+								<!--==================== ПРИМЕР С ДРОПОМ конец =======================-->
+								<!--==================================================================-->
 							</ul>
 							<!--(1) END nav FIRST level-->
 						</nav>
@@ -433,9 +458,9 @@
 								<!--developer-->
 								<div class="developer">
 									<a href="http://astronim.by/" target="_blank">
-										<span class="developer__label">Разработка сайта <i>—</i></span>
-										<span class="developer__logo">Astronim*Support</span>
-									</a>
+								<span class="developer__label">Разработка сайта <i>—</i></span>
+								<span class="developer__logo">Astronim*Support</span>
+							</a>
 								</div>
 								<!--developer end-->
 							</div>
