--- a/src/_tpl_forms_form-validation.html
+++ b/src/_tpl_forms_form-validation.html
@@ -1,2 +1,2 @@
-<div class="error-note">@@if(context.errorNote) {@@errorNote}@@if(!context.errorNote) {Поле обязательное для заполнения}</div>
-<div class="success-note">@@if(context.successNote) {@@successNote}@@if(!context.successNote) {Подтверждено}</div>
+<div class="error-note">@@if(context.errorNote) {@@errorNote}@@if(!context.errorNote) {Error text}</div>
+<div class="success-note">@@if(context.successNote) {@@successNote}@@if(!context.successNote) {Success text}</div>
