--- a/src/__forms.html
+++ b/src/__forms.html
@@ -80,7 +80,7 @@
 								<div>
 									@@include('_tpl_title-anchor.html', {
 										"taTag": "h4",
-										"taId": "fcInputTypeText",
+										"taId": "fcInputTypeTextExpl",
 										"taText": "Example input field",
 										"openerId": "0_01_00"
 									})
@@ -125,6 +125,18 @@
 												"important": "",
 												"readonly": "",
 												"disabled": ""
+											},{
+												"wrap": "",
+												"type": "text",
+												"value": "",
+												"ph": "Placeholder",
+												"id": "form-clear-base-disabled",
+												"classes": "",
+												"label": "Text input - disabled:",
+												"labelClasses": "",
+												"important": "",
+												"readonly": "",
+												"disabled": "true"
 											},{
 												"wrap": "",
 												"type": "text",
